# GenAI-Monitor

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  hooks.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.well-known/: assetlinks.json
api_reference/db/: index.html
api_reference/injectors/: index.html
api_reference/query/: index.html
api_reference/registration/: index.html
api_reference/structures/: index.html
api_reference/utils/: index.html
data/jk/dynamic-version/: coverage.xml
data/jk/fix-build/: coverage.xml
data/jk/fix-version/: coverage.xml
data/jk/pyproject-updates/: coverage.xml
data/jk/release-github-actions/: coverage.xml
data/jk/remove-old-logo/: coverage.xml
data/jk/semantic-release-build/: coverage.xml
data/jk/update-mds/: coverage.xml
data/main/: coverage.xml
docs/: index.md
docs/api_reference/: db.md  injectors.md  query.md  registration.md  structures.md  utils.md
docs/how_to/: artifact_tracking.md  cached_instances.md  custom_registration.md  db_setup.md  model_metadata.md
docs/index/: index.md
docs/quickstart/: auto_mode.md
how_to/artifact_tracking/: index.html
how_to/cached_instances/: index.html
how_to/custom_registration/: index.html
how_to/db_setup/: index.html
how_to/model_metadata/: index.html
quickstart/auto_mode/: index.html
search/: search_index.json
src/genai_monitor/: __init__.py  dependencies.py
src/genai_monitor.egg-info/: PKG-INFO  requires.txt
src/genai_monitor/auto/: __init__.py
src/genai_monitor/common/: errors.py  types.py  utils.py
src/genai_monitor/common/structures/: data.py
src/genai_monitor/db/: __init__.py  config.py  manager.py
src/genai_monitor/db/schemas/: base.py  tables.py
src/genai_monitor/injectors/: containers.py  registry.py  wrapper.py
src/genai_monitor/query/: api.py
src/genai_monitor/registration/: api.py  auto.py  collection.py  utils.py
src/genai_monitor/static/: constants.py
src/genai_monitor/structures/: persistency_manager.py
src/genai_monitor/structures/conditioning_parsers/: base.py  litellm.py  openai.py  stable_diffusion.py  transformers_text_generation.py
src/genai_monitor/structures/output_parsers/: base.py  litellm.py  openai.py  stable_diffusion.py  transformers_text_generation.py
src/genai_monitor/utils/: auto_mode_configuration.py  data.py  data_hashing.py  model_hashing.py  user_registration.py
tests/: conftest.py
tests/artifact_tracking/: test_artifacts.py
tests/cached_instances/: test_callable_caching_instances.py  test_class_caching_instances.py
tests/conditioning_parsers/: test_conditioning_metadata.py  test_conditioning_parser.py  test_seed_tracking.py
tests/database_versioning/: test_sample_versioning.py  test_version_setting.py
tests/db_manager/: conftest.py  test_db_manager.py
tests/hashing/: test_custom_model_hashing.py  test_model_hashing.py
tests/output_parsers/: test_disabled_persistency.py  test_enabled_persistency.py
tests/registration/: test_function_registration.py  test_model_registration.py
