[project]
name = "genai-monitor"
version = "0.1.0"
description = "Observability for Generative AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.2.1",
    "attrs==24.2.0",
    "bump2version>=1.0.1,<2.0.0",
    "cattrs>=24.1.2",
    "dependency-injector>=4.45.0",
    "diffusers>=0.31.0",
    "einops==0.8.0",
    "fastapi[standard]==0.115.6",
    "imagehash>=4.3.1",
    "litellm>=1.60.2",
    "loguru>=0.7.2",
    "mkdocs-autorefs>=1.4.1",
    "mkdocs-click>=0.9.0",
    "mkdocs-material>=9.6.11",
    "mkdocstrings[python]>=0.29.1",
    "myst-parser>=1.0.0",
    "numpy>=2.0.0",
    "openai>=1.55.0",
    "pillow>=11.0.0",
    "pip-licenses>=4.0.0,<5.0.0",
    "pre-commit>=4.2.0",
    "protobuf==5.29.1",
    "pydantic-settings>=2.6.1",
    "pytest>=6.2.5",
    "pytest-cov>=6.1.1",
    "sentencepiece==0.2.0",
    "sphinx>=5.3.0,<6.0.0",
    "sphinx-rtd-theme>=1.1.1,<2.0.0",
    "sphinxcontrib-mermaid>=1.0.0",
    "sqlalchemy>=2.0.35",
    "sqlalchemy-mixins>=2.0.5",
    "torch>=2.2.0",
    "transformers>=4.46.2",
    "transformers-stream-generator==0.0.5",
]

[dependency-groups]
dev = [
    "mkdocs-click>=0.9.0",
    "ruff>=0.11.4",
]

[tool.ruff]
exclude = [".venv"]
extend-include = ["*.ipynb"]
line-length = 120

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "C4",   # flake8-comprehensions
    "C90",  # mccabe complex structure
    "D",    # pydocstyle
    "I",    # isort
    "PT",   # flake8-pytest-style
    "PL",   # Pylint
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
    "S",    # flake8-bandit
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
]

ignore = [
    "D100",
    "D102",
    "D104",
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN401",
    "UP006",
    "UP007",
    "UP035",
    "PLR0913",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/genai_monitor/common/errors.py" = ["D107", "ANN204"]
"src/genai_monitor/query/api.py" = ["D103", "D107", "ANN204"]
"tests/*.py" = ["S101", "D103", "ANN204", "PLR2004", "D107", "D101"]
[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
warn_unused_ignores = false
show_error_codes = true
check_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true
mypy_path = [
    "src/genai_monitor"
]
disable_error_code = ["call-arg"]